@@ -357,3 +357,5 @@ aunque no todos. por ejemplo en +3dsk, visor format disc, pulsar en archivo-> bl
 
 -revisar accesibilidad y submenus... a veces se lee submenu. ejemplo text to speech pulsar alguna opcion que conmuta en ese menu
 
+
+-revisar menus zeng online server y client: opciones [0] a la derecha, revisar algunos mensajes como al unirse (creo) que luego vuelve a menu anterior, etc
