@@ -1249,6 +1249,8 @@ extern int menu_da_ancho_titulo(char *titulo);
 
 extern int menu_tooltip_counter;
 
+extern void menu_footer_f5_menu_timer(void);
+
 extern int menu_window_splash_counter;
 extern int menu_window_splash_counter_ms;
 
