@@ -42,6 +42,7 @@ Fixed Amstrad CPC Scroll
 Fixed loading .nex snapshots and Layer 2 not being initialized (fixes errors on Head Over Heels for Next, for example)
 Fixed Search menu feature
 Fixed bug saving .ZSF Z88 snapshot when RAM or Memory Card block is not compressed
+Fixed showing footer message F5/Button menu
 
 * Misc Changes:
 
